2011-02-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #12230: Add unit test to test tslib_cObj::crop() for multibyte compatibility
	* Fixed bug #12230: Function tslib_cObj::crop() is not fully multibyte safe (Thanks to Vladimir Podkovanov)

2011-02-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17501: User setup - pressing return creates installtool file
	* Raised CodeMirror to version 0.9.3

2011-02-08  Steffen Kamper  <steffen@typo3.org>

	* Merged em from rev 4093
	* Fixed bug #15771: Docheader (save, save+view, save+close etc) missing
	* Follow-up to #17500: Improve error handling in ExtDirect router (Thanks to Helmut Hummel)

2011-02-08  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17507: Extension using stdWrap hooks are broken due to stdWrap refactoring (Thank also to Jo Hasenau)

2011-02-07  Stanislas Rolland  <typo3@sjbr.ca>

	* htmlArea RTE: Updated Manual

2011-02-07 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17502: ExtDirect Exception: "Error parsing json response: null"
	* Fixed bug #17500: Improve error handling in ExtDirect router (Thanks to Helmut Hummel)

2011-02-07  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17478: Wrong behaviour of "$TYPO3_CONF_VARS['SYS']['sqlDebug'] = TRUE" (since #15425)

2011-02-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17464: ExtDirectCode is added twice

2011-02-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17413: ExtJs Theme - use grey folder items for tree by default
	* Fixed bug #17057: StateProvider values not respected
	* Fixed bug #17493: Filelist misses open folder icon
	* Fixed bug #17490: After introducing the locking in #17289 no CSRF token will ever be deleted (Thanks to Helmut Hummel)

2011-02-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17374: implode() issues in Install Tool
	* Fixed bug #12998: Icons for Word documents missing (Thanks to Tobias Schäfer)

2011-02-04  Steffen Kamper  <steffen@typo3.org>
