@@ -5308,7 +5308,13 @@ final class t3lib_div {
 	 * @return	string		Final class name to instantiate with "new [classname]"
 	 */
 	protected function getClassName($className) {
-		return (class_exists($className) && class_exists('ux_' . $className, FALSE) ? self::getClassName('ux_' . $className) : $className);
+		if (class_exists($className)) {
+			while (class_exists('ux_' . $className, FALSE)) {
+				$className = 'ux_' . $className;
+			}
+		}
+
+		return $className;
 	}
 
 	/**
