@@ -1,3 +1,7 @@
+2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Follow-up to #16591: Make getClassName() non recursive (Thanks to Pierre Dudoret)
+
 2011-02-10  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Follow-up to #12230: Add unit test to test tslib_cObj::crop() for multibyte compatibility
